--- a/images/backer/src/templates/lending/index.html
+++ b/images/backer/src/templates/lending/index.html
@@ -1,21 +1,24 @@
-<!doctype html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <link rel="icon" type="image/ico" href="{{asset_url_for('favicon.ico')}}"/>
-  <title>Flask Webpack Starter-Kit</title>  
-  <link rel="stylesheet" href="{{asset_url_for('vendors.css')}}"/>
-  <link rel="stylesheet" href="{{asset_url_for('lending.css')}}"/>  
-</head>
-<body>
-  <div> 
-    Flask Webpack Starter-Kit works!!!
-  </div>
-  <br>  
-  <div>
-      <i class="fa fa-fw fa-question"></i>
-  </div>
-  <script src="{{asset_url_for('vendors.js')}}"></script>
+{% extends "layout.html" %}
+
+{% block page_title %}
+  Flask Webpack Starter-Kit
+{% endblock %}
+
+{% block css %}
+  <link rel="stylesheet" href="{{asset_url_for('lending.css')}}"/> 
+{% endblock %}
+
+
+{% block content %}
+<div>
+  Flask Webpack Starter-Kit works!!!
+</div>
+<br>  
+<div>
+    <i class="fa fa-fw fa-question"></i>
+</div>
+{% endblock %}
+
+{% block js %}
   <script src="{{asset_url_for('lending.js')}}"></script>
-</body>
-</html>
+{% endblock %}
